:bug: Fix when component has a long name then its icon and '3 dots' menu are not visible on Design tab

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -555,6 +555,12 @@
     margin-right: $size-2;
   }
 
+  .component-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+  }
+
   .row-actions {
     margin-left: auto;
     cursor: pointer;
